@@ -453,6 +453,9 @@
       \item The parser now enforces C99 syntax for floating point
       hexadecimal constants (e.g. \code{0x1.1p0}), rather than returning
       unintended values for malformed constants. (\PR{15234})
+
+      \item \code{model.matrix()} now works with very long lhs
+      names (more than 500 bytes).  (\PR{15377})
     }
   }
 }
